# modav_widgets

./: Cargo.toml  README.md
.nvim/: config.lua  sessions.vim
examples/highlighter/: dummy.csv  highlighter.rs
examples/table/: main.rs
examples/tree/: tree.rs
highlighter/: Cargo.toml
highlighter/src/: lib.rs
src/: custom.rs  highlighter.rs  lib.rs  main.rs  table.rs
src/table/: state.rs  style.rs  utils.rs
table/: Cargo.toml
table/src/: lib.rs  state.rs  utils.rs
table/src/state/: overlay.rs
tree/: Cargo.toml
tree/src/: base.rs  lib.rs  style.rs  tree.rs
