[package]
name = "widgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["highlighter"]

[workspace.dependencies]
highlighter = { version = "0.1.0", path = "highlighter" }
iced = { version = "0.13.1", features = [
    "advanced",
    "highlighter",
    "tokio",
    "canvas",
] }

[dependencies]
iced.workspace = true
highlighter.workspace = true

[[example]]
name = "highlighter"
path = "examples/highlighter/highlighter.rs"
