[package]
name = "widgets"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = ["table", "highlighter"]

[workspace.dependencies]
table = { version = "0.1.0", path = "table" }
highlighter = { version = "0.1.0", path = "highlighter" }
iced = { version = "0.13.1", features = [] }

[dependencies]
iced.workspace = true
table.workspace = true
highlighter.workspace = true

[dev-dependencies]
modav_core = { git = "ssh://github.com/EmmanuelDodoo/modav_core.git" }


[[example]]
name = "table"
path = "examples/table/main.rs"


[[example]]
name = "highlighter"
path = "examples/highlighter/highlighter.rs"
